src/templates/items-list/items-style/emerge/style.scss
@import "./variables";

/**
 * Emerge items style
 */
.vp-portfolio__items-style-emerge {
    .vp-portfolio__item a {
        color: var(--vp-items-style-emerge--links__color);
        text-decoration: var(--vp-items-style-emerge--links__text-decoration);
        outline: none;
        box-shadow: none;

        &:hover,
        &:focus {
            color: var(--vp-items-style-emerge--links-hover__color);
        }
    }

    .vp-portfolio__item-overlay {
        position: absolute;
        bottom: 0;
        left: 0;
        width: 100%;
        padding: var(--vp-items-style-emerge--overlay__padding-v) var(--vp-items-style-emerge--overlay__padding-h);
        color: var(--vp-items-style-emerge--overlay__color);
        background-color: var(--vp-items-style-emerge--overlay__background-color);
        transition: var(--vp-items-style-emerge-transition-duration) transform var(--vp-items-style-emerge-transition-easing);
        transform: translateY(100%);
        will-change: transform;

        &::before {
            content: "";
            position: absolute;
            display: block;
            top: 0;
            right: 0;
            left: var(--vp-items-style-emerge--overlay-skew__compensate);
            height: var(--vp-items-style-emerge--overlay-skew__height);
            background-color: var(--vp-items-style-emerge--overlay__background-color);
            transition: var(--vp-items-style-emerge-transition-duration) transform var(--vp-items-style-emerge-transition-easing);
            transform: var(--vp-items-style-emerge--overlay-skew__transform);
            transform-origin: 100% 0;
            will-change: transform;
            z-index: -1;
        }
    }

    // fix some themes figcaption styles.
    figcaption.vp-portfolio__item-overlay {
        font-style: inherit;
    }

    // meta
    .vp-portfolio__item-meta {
        color: inherit;
        opacity: 0;
        transition: transform var(--vp-items-style-emerge-transition-duration) .1s var(--vp-items-style-emerge-transition-easing), opacity var(--vp-items-style-emerge-transition-duration) .1s var(--vp-items-style-emerge-transition-easing);
        transform: translateY(10px);
        will-change: transform, opacity;

        > * {
            margin-bottom: var(--vp-items-style-emerge--meta-items__gap);
        }

        > :last-child {
            margin-bottom: 0;
        }
    }
    .vp-portfolio__item-meta-categories {
        display: inline-flex;
        flex-wrap: wrap;
        margin-right: 0;
        margin-left: calc(-1 * var(--vp-items-style-emerge--meta-categories__gap));
        font-size: var(--vp-items-style-emerge--meta-categories__font-size);
        font-weight: var(--vp-items-style-emerge--meta-categories__font-weight);
        text-transform: var(--vp-items-style-emerge--meta-categories__text-transform);
        list-style-type: none;
        opacity: var(--vp-items-style-emerge--meta-categories__opacity);

        .vp-portfolio__item-meta-category {
            display: flex;
            padding: 0;
            margin: 0;
            margin-right: var(--vp-items-style-emerge--meta-categories__gap);

            &::after {
                content: var(--vp-items-style-emerge--meta-categories__separator);
            }
            &:last-of-type::after {
                content: none;
            }

            a {
                text-decoration: var(--vp-items-style-emerge--meta-categories__text-decoration);
            }
        }
    }
    .vp-portfolio__item-meta-title {
        font-size: var(--vp-items-style-emerge--meta-title__font-size);
        color: inherit;
    }
    .vp-portfolio__item-meta-inline {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
        margin-left: calc(-1 * var(--vp-items-style-emerge--meta-inline__gap));
        font-weight: var(--vp-items-style-emerge--meta-inline__font-weight);
        line-height: var(--vp-items-style-emerge--meta-inline__line-height);
        opacity: var(--vp-items-style-emerge--meta-inline__font-opacity);

        > * {
            margin-left: var(--vp-items-style-emerge--meta-inline__gap);
        }
    }
    .vp-portfolio__item-meta-part {
        display: inline-flex;
        align-items: center;
    }
    .vp-portfolio__item-meta-part-icon {
        margin-right: var(--vp-items-style-emerge--meta-part-icon__offset);

        img,
        svg {
            width: var(--vp-items-style-emerge--meta-part-icon__width);
            height: auto;
        }
    }
    .vp-portfolio__item-meta-author {
        display: flex;
        align-items: center;

        img {
            border-radius: var(--vp-items-style-emerge--meta-part-icon__width);
        }
    }
    .vp-portfolio__item-meta-excerpt {
        line-height: var(--vp-items-style-emerge--meta-excerpt__line-height);
        opacity: var(--vp-items-style-emerge--meta-excerpt__opacity);
    }

    // Transitions
    .vp-portfolio__item-img img {
        transition: transform var(--vp-items-style-emerge-transition-duration) var(--vp-items-style-emerge-transition-easing), opacity var(--vp-items-style-emerge-transition-duration) var(--vp-items-style-emerge-transition-easing);
        will-change: transform, opacity;
    }

    .vp-portfolio__item:hover,
    .vp-portfolio__item:focus {
        .vp-portfolio__item-img img {
            transform: var(--vp-items-style-emerge--image-hover__transform);
        }
        .vp-portfolio__item-overlay {
            transform: translateY(0);
            &::before {
                transform: var(--vp-items-style-emerge--overlay-skew-hover__transform);
            }
        }
        .vp-portfolio__item-meta {
            opacity: 1;
            transform: translateY(0);
        }
    }

    // fix align for gutenberg block.
    figcaption.vp-portfolio__item-meta {
        text-align: inherit;
    }

    // align
    .vp-portfolio__item-align-left {
        text-align: left;

        .vp-portfolio__item-meta-categories,
        .vp-portfolio__item-meta-inline {
            justify-content: flex-start;
        }
    }
    .vp-portfolio__item-align-center {
        text-align: center;

        .vp-portfolio__item-meta-categories,
        .vp-portfolio__item-meta-inline {
            justify-content: center;
        }
    }
    .vp-portfolio__item-align-right {
        text-align: right;

        .vp-portfolio__item-meta-categories,
        .vp-portfolio__item-meta-inline {
            justify-content: flex-end;
        }
    }
}

